# neuron_field

./: README.md  package.ipynb  requirements.txt  setup.cfg  setup.py
.ipynb_checkpoints/: README-checkpoint.md  jupyter_notebook_tutorial-checkpoint.ipynb
neuron_field_package/: __init__.py
src/neuron_field/: __init__.py
src/neuron_field.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
