[metadata]
name = neuron_field
description = This project seeks to explore whether we can use more brain-like 3D neuron structures to make predictions.
author = August Van Hout
license = Apache
license_file = LICENSE
platforms = unix, linus, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
	neuron_field
install_requires = 
	numpy
	pandas
	matplotlib
	seaborn
	random
	copy
	imageio
	keras
package_dir = 
	src
zip_safe = no
