[metadata]
name = neuron_field
description = This project seeks to explore whether we can use more brain-like 3D neuron structures to make predictions.
author = August Van Hout
license = Apache
license_file = LICENSE
platforms = unix, linus, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
	neuron_field
install_requires = 
	numpy==1.21.5
	pandas==1.4.2
	matplotlib==3.5.1
	seaborn==0.11.2
	imageio==2.9.0
	keras==2.10.0
package_dir = 
	=src
